--- a/todolist/admin/comptes.html
+++ b/todolist/admin/comptes.html
@@ -185,11 +185,145 @@
                   <option value="pending">En attente</option>
                   <option value="suspended">Suspendu</option>
                 </select>
-                <button class="btn btn-primary">
+                <button class="btn btn-primary" id="add-new-user-btn">
                   <i class="fas fa-plus"></i>
                   Nouveau compte
                 </button>
               </div>
+            </div>
+          </div>
+
+          <!-- New User Modal -->
+          <div class="modal" id="addUserModal">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title">Ajouter un Nouveau Compte</h5>
+                <button
+                  type="button"
+                  class="close"
+                  data-modal-close="#addUserModal"
+                >
+                  &times;
+                </button>
+              </div>
+              <form id="addUserForm" novalidate>
+                <div class="modal-body">
+                  <div class="form-group mb-3">
+                    <label for="userEmail">Email de l'utilisateur</label>
+                    <input
+                      type="email"
+                      class="form-control"
+                      id="userEmail"
+                      name="email"
+                      required
+                    />
+                  </div>
+                  <div class="form-group mb-3">
+                    <label for="userPassword">Mot de passe</label>
+                    <input
+                      type="password"
+                      class="form-control"
+                      id="userPassword"
+                      name="password"
+                      required
+                    />
+                  </div>
+                  <div class="form-group mb-3">
+                    <label for="userRole">Rôle</label>
+                    <select
+                      class="form-control"
+                      id="userRole"
+                      name="id_role"
+                      required
+                    >
+                      <option value="">Sélectionner un rôle</option>
+                      <option value="1">Administrateur</option>
+                      <option value="2">Enseignant</option>
+                      <option value="3">Étudiant</option>
+                      <!-- Add other roles as needed -->
+                    </select>
+                  </div>
+                  <div id="studentFields" style="display: none">
+                    <div class="form-group mb-3">
+                      <label for="studentNom">Nom</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="studentNom"
+                        name="nom"
+                      />
+                    </div>
+                    <div class="form-group mb-3">
+                      <label for="studentPrenom">Prénom</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="studentPrenom"
+                        name="prenom"
+                      />
+                    </div>
+                    <div class="form-group mb-3">
+                      <label for="studentDateNaissance"
+                        >Date de Naissance</label
+                      >
+                      <input
+                        type="date"
+                        class="form-control"
+                        id="studentDateNaissance"
+                        name="date_naissance"
+                      />
+                    </div>
+                    <div class="form-group mb-3">
+                      <label for="studentLieuNaissance"
+                        >Lieu de Naissance</label
+                      >
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="studentLieuNaissance"
+                        name="lieu_naissance"
+                      />
+                    </div>
+                    <div class="form-group mb-3">
+                      <label for="studentTelephone">Téléphone</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="studentTelephone"
+                        name="telephone"
+                      />
+                    </div>
+                    <div class="form-group mb-3">
+                      <label for="studentAdresse">Adresse</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="studentAdresse"
+                        name="adresse"
+                      />
+                    </div>
+                    <div class="form-group mb-3">
+                      <label for="studentSexe">Sexe</label>
+                      <select class="form-control" id="studentSexe" name="sexe">
+                        <option value="M">M</option>
+                        <option value="F">F</option>
+                      </select>
+                    </div>
+                  </div>
+                </div>
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    class="btn btn-secondary"
+                    data-modal-close="#addUserModal"
+                  >
+                    Annuler
+                  </button>
+                  <button type="submit" class="btn btn-primary">
+                    Ajouter le Compte
+                  </button>
+                </div>
+              </form>
             </div>
           </div>
 
@@ -300,7 +434,7 @@
                       <th>Actions</th>
                     </tr>
                   </thead>
-                  <tbody>
+                  <tbody id="usersTableBody">
                     <!-- Users will be loaded here by JavaScript -->
                   </tbody>
                 </table>
