--- a/todolist/student/dashboard.html
+++ b/todolist/student/dashboard.html
@@ -669,8 +669,8 @@
         <a href="#about">About</a>
         <a href="#Guide">Guide</a>
         <a href="#contact">Contact</a>
-        <a href="login.html" class="login-button">
-          <i class="fas fa-sign-in-alt"></i> Login
+        <a href="../logout.php" class="nav-cta" id="logoutButton">
+          <i class="fas fa-sign-out-alt"></i> Logout
         </a>
       </div>
       <div class="mobile-menu-toggle">
@@ -977,199 +977,213 @@
         <i class="fas fa-arrow-up"></i>
       </div>
     </footer>
-  </body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    // Navbar Scroll Effect
-    window.addEventListener("scroll", function () {
-      const navbar = document.querySelector(".navbar");
-      if (window.scrollY > 50) {
-        navbar.classList.add("scrolled");
-      } else {
-        navbar.classList.remove("scrolled");
-      }
-    });
-
-    // Mobile Menu Toggle
-    const mobileMenuToggle = document.querySelector(".mobile-menu-toggle");
-    const navLinks = document.querySelector(".nav-links");
-
-    mobileMenuToggle.addEventListener("click", function () {
-      navLinks.classList.toggle("active");
-      this.innerHTML = navLinks.classList.contains("active")
-        ? '<i class="fas fa-times"></i>'
-        : '<i class="fas fa-bars"></i>';
-    });
-
-    // Close menu when clicking on a link (mobile)
-    document.querySelectorAll(".nav-links a").forEach((link) => {
-      link.addEventListener("click", () => {
-        if (window.innerWidth <= 768) {
-          navLinks.classList.remove("active");
-          mobileMenuToggle.innerHTML = '<i class="fas fa-bars"></i>';
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      // Navbar Scroll Effect (outside DOMContentLoaded as it's a window event)
+      window.addEventListener("scroll", function () {
+        const navbar = document.querySelector(".navbar");
+        if (window.scrollY > 50) {
+          navbar.classList.add("scrolled");
+        } else {
+          navbar.classList.remove("scrolled");
         }
       });
-    });
 
-    // Smooth scrolling for anchor links
-    document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
-      anchor.addEventListener("click", function (e) {
-        e.preventDefault();
+      // Mobile Menu Toggle (outside DOMContentLoaded as it's an immediate event)
+      const mobileMenuToggle = document.querySelector(".mobile-menu-toggle");
+      const navLinks = document.querySelector(".nav-links");
 
-        const targetId = this.getAttribute("href");
-        if (targetId === "#") return;
+      mobileMenuToggle.addEventListener("click", function () {
+        navLinks.classList.toggle("active");
+        this.innerHTML = navLinks.classList.contains("active")
+          ? '<i class="fas fa-times"></i>'
+          : '<i class="fas fa-bars"></i>';
+      });
 
-        const targetElement = document.querySelector(targetId);
-        if (targetElement) {
-          targetElement.scrollIntoView({
-            behavior: "smooth",
-            block: "start",
+      // Close menu when clicking on a link (mobile) (outside DOMContentLoaded)
+      document.querySelectorAll(".nav-links a").forEach((link) => {
+        link.addEventListener("click", () => {
+          if (window.innerWidth <= 768) {
+            navLinks.classList.remove("active");
+            mobileMenuToggle.innerHTML = '<i class="fas fa-bars"></i>';
+          }
+        });
+      });
+
+      // Smooth scrolling for anchor links (outside DOMContentLoaded)
+      document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
+        anchor.addEventListener("click", function (e) {
+          e.preventDefault();
+
+          const targetId = this.getAttribute("href");
+          if (targetId === "#") return;
+
+          const targetElement = document.querySelector(targetId);
+          if (targetElement) {
+            targetElement.scrollIntoView({
+              behavior: "smooth",
+              block: "start",
+            });
+          }
+        });
+      });
+
+      document.addEventListener("DOMContentLoaded", function () {
+        // Logout button functionality
+        const logoutButton = document.getElementById("logoutButton");
+        if (logoutButton) {
+          logoutButton.addEventListener("click", function (e) {
+            e.preventDefault(); // Prevent default link behavior
+            if (confirm("Voulez-vous vraiment vous déconnecter ?")) {
+              window.location.href = "../logout.php";
+            }
           });
         }
-      });
-    });
-    document.addEventListener("DOMContentLoaded", function () {
-      // Set current year in copyright
-      document.getElementById("year").textContent = new Date().getFullYear();
 
-      // Back to top button
-      const backToTopButton = document.querySelector(".back-to-top");
+        // Set current year in copyright
+        document.getElementById("year").textContent = new Date().getFullYear();
 
-      window.addEventListener("scroll", function () {
-        if (window.pageYOffset > 300) {
-          backToTopButton.classList.add("active");
-        } else {
-          backToTopButton.classList.remove("active");
-        }
-      });
+        // Back to top button
+        const backToTopButton = document.querySelector(".back-to-top");
 
-      // Animate footer links on hover
-      const footerLinks = document.querySelectorAll(".footer-links a");
-
-      footerLinks.forEach((link) => {
-        link.addEventListener("mouseenter", function () {
-          this.style.transform = "translateX(5px)";
-        });
-
-        link.addEventListener("mouseleave", function () {
-          this.style.transform = "translateX(0)";
-        });
-      });
-
-      // Newsletter form submission
-      const newsletterForm = document.querySelector(".newsletter-form");
-
-      if (newsletterForm) {
-        newsletterForm.addEventListener("submit", function (e) {
-          e.preventDefault();
-          const emailInput = this.querySelector('input[type="email"]');
-
-          if (emailInput.value.trim() !== "") {
-            // Here you would typically send the email to your server
-            alert("Merci pour votre inscription à notre newsletter!");
-            emailInput.value = "";
+        window.addEventListener("scroll", function () {
+          if (window.pageYOffset > 300) {
+            backToTopButton.classList.add("active");
           } else {
-            alert("Veuillez entrer une adresse email valide.");
+            backToTopButton.classList.remove("active");
           }
         });
-      }
 
-      // Add animation to social icons
-      const socialIcons = document.querySelectorAll(".social-icon");
+        // Animate footer links on hover
+        const footerLinks = document.querySelectorAll(".footer-links a");
 
-      socialIcons.forEach((icon) => {
-        icon.addEventListener("mouseenter", function () {
-          this.style.transform = "translateY(-3px)";
+        footerLinks.forEach((link) => {
+          link.addEventListener("mouseenter", function () {
+            this.style.transform = "translateX(5px)";
+          });
+
+          link.addEventListener("mouseleave", function () {
+            this.style.transform = "translateX(0)";
+          });
         });
 
-        icon.addEventListener("mouseleave", function () {
-          this.style.transform = "translateY(0)";
+        // Newsletter form submission
+        const newsletterForm = document.querySelector(".newsletter-form");
+
+        if (newsletterForm) {
+          newsletterForm.addEventListener("submit", function (e) {
+            e.preventDefault();
+            const emailInput = this.querySelector('input[type="email"]');
+
+            if (emailInput.value.trim() !== "") {
+              // Here you would typically send the email to your server
+              alert("Merci pour votre inscription à notre newsletter!");
+              emailInput.value = "";
+            } else {
+              alert("Veuillez entrer une adresse email valide.");
+            }
+          });
+        }
+
+        // Add animation to social icons
+        const socialIcons = document.querySelectorAll(".social-icon");
+
+        socialIcons.forEach((icon) => {
+          icon.addEventListener("mouseenter", function () {
+            this.style.transform = "translateY(-3px)";
+          });
+
+          icon.addEventListener("mouseleave", function () {
+            this.style.transform = "translateY(0)";
+          });
         });
-      });
 
-      // Add scroll animation to footer elements
-      const footerWidgets = document.querySelectorAll(".footer-widget");
+        // Add scroll animation to footer elements
+        const footerWidgets = document.querySelectorAll(".footer-widget");
 
-      const observerOptions = {
-        threshold: 0.1,
-        rootMargin: "0px 0px -50px 0px",
-      };
+        const observerOptions = {
+          threshold: 0.1,
+          rootMargin: "0px 0px -50px 0px",
+        };
 
-      const observer = new IntersectionObserver((entries, observer) => {
-        entries.forEach((entry) => {
-          if (entry.isIntersecting) {
-            entry.target.style.opacity = "1";
-            entry.target.style.transform = "translateY(0)";
-            observer.unobserve(entry.target);
-          }
+        const observer = new IntersectionObserver((entries, observer) => {
+          entries.forEach((entry) => {
+            if (entry.isIntersecting) {
+              entry.target.style.opacity = "1";
+              entry.target.style.transform = "translateY(0)";
+              observer.unobserve(entry.target);
+            }
+          });
+        }, observerOptions);
+
+        footerWidgets.forEach((widget, index) => {
+          widget.style.opacity = "0";
+          widget.style.transform = "translateY(20px)";
+          widget.style.transition = `opacity 0.5s ease ${
+            index * 0.1
+          }s, transform 0.5s ease ${index * 0.1}s`;
+          observer.observe(widget);
         });
-      }, observerOptions);
 
-      footerWidgets.forEach((widget, index) => {
-        widget.style.opacity = "0";
-        widget.style.transform = "translateY(20px)";
-        widget.style.transition = `opacity 0.5s ease ${
-          index * 0.1
-        }s, transform 0.5s ease ${index * 0.1}s`;
-        observer.observe(widget);
-      });
+        // Fetch student profile data
+        fetch("../get_student_profile.php")
+          .then((response) => response.json())
+          .then((data) => {
+            if (data.success && data.student) {
+              const student = data.student;
 
-      // Fetch student profile data
-      fetch("../get_student_profile.php")
-        .then((response) => response.json())
-        .then((data) => {
-          if (data.success && data.student) {
-            const student = data.student;
+              document.getElementById("profilePhoto").src =
+                student.profile_picture_path ||
+                "https://via.placeholder.com/150/E0E0E0/808080?text=Profil";
 
-            document.getElementById("profilePhoto").src =
-              student.profile_picture_path ||
-              "https://via.placeholder.com/150/E0E0E0/808080?text=Profil";
+              document.getElementById("studentName").textContent =
+                student.prenom + " " + student.nom;
+              document.querySelector(
+                ".welcome-banner h2"
+              ).textContent = `Bonjour ${student.prenom} ${student.nom}`;
 
-            document.getElementById("studentName").textContent =
-              student.prenom + " " + student.nom;
-            document.querySelector(
-              ".welcome-banner h2"
-            ).textContent = `Bonjour ${student.prenom} ${student.nom}`;
-
-            // Helper function to update info card
-            function updateInfoCard(id, value) {
-              const element = document.getElementById(id);
-              const parentCard = element ? element.closest(".info-card") : null;
-              if (value && value.trim() !== "" && value !== "N/A") {
-                if (element) {
-                  element.textContent = value;
-                }
-                if (parentCard) {
-                  parentCard.style.display = ""; // Show the card
-                }
-              } else {
-                if (parentCard) {
-                  parentCard.style.display = "none"; // Hide the card
+              // Helper function to update info card
+              function updateInfoCard(id, value) {
+                const element = document.getElementById(id);
+                const parentCard = element
+                  ? element.closest(".info-card")
+                  : null;
+                if (value && value.trim() !== "" && value !== "N/A") {
+                  if (element) {
+                    element.textContent = value;
+                  }
+                  if (parentCard) {
+                    parentCard.style.display = ""; // Show the card
+                  }
+                } else {
+                  if (parentCard) {
+                    parentCard.style.display = "none"; // Hide the card
+                  }
                 }
               }
-            }
 
-            updateInfoCard("emailValue", student.email);
-            updateInfoCard("usernameValue", student.username || "N/A"); // Assuming username exists if you want to display it
-            updateInfoCard("nomValue", student.nom);
-            updateInfoCard("prenomValue", student.prenom);
-            updateInfoCard("sexeValue", student.sexe);
-            updateInfoCard("nationaliteValue", student.nationalite || "N/A");
-            updateInfoCard(
-              "dateNaissanceValue",
-              student.date_naissance || "N/A"
-            );
-            updateInfoCard("lieuNaissanceValue", student.lieu_naissance);
-            updateInfoCard("codeApogeeValue", student.code_apogee);
-            updateInfoCard("adresseValue", student.adresse);
-            updateInfoCard("telephoneValue", student.telephone);
-          } else {
-            console.error("Failed to load student profile:", data.message);
-          }
-        })
-        .catch((error) => {
-          console.error("Error fetching student profile:", error);
-        });
-    });
-  </script>
+              updateInfoCard("emailValue", student.email);
+              updateInfoCard("usernameValue", student.username || "N/A"); // Assuming username exists if you want to display it
+              updateInfoCard("nomValue", student.nom);
+              updateInfoCard("prenomValue", student.prenom);
+              updateInfoCard("sexeValue", student.sexe);
+              updateInfoCard("nationaliteValue", student.nationalite || "N/A");
+              updateInfoCard(
+                "dateNaissanceValue",
+                student.date_naissance || "N/A"
+              );
+              updateInfoCard("lieuNaissanceValue", student.lieu_naissance);
+              updateInfoCard("codeApogeeValue", student.code_apogee);
+              updateInfoCard("adresseValue", student.adresse);
+              updateInfoCard("telephoneValue", student.telephone);
+            } else {
+              console.error("Failed to load student profile:", data.message);
+            }
+          })
+          .catch((error) => {
+            console.error("Error fetching student profile:", error);
+          });
+      });
+    </script>
+  </body>
 </html>
